--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,11 +5,11 @@ environment:
     - nodejs_version: "1.8"
     - nodejs_version: "2.5"
     - nodejs_version: "3.3"
-    - nodejs_version: "4.9"
+    - nodejs_version: "4.9"1122
     - nodejs_version: "5.12"
     - nodejs_version: "6.17"
     - nodejs_version: "7.10"
-    - nodejs_version: "8.17"
+    - nodejs_version: "8.17"22
     - nodejs_version: "9.11"
     - nodejs_version: "10.24"
     - nodejs_version: "11.15"
